Accessing Relational Data using JDBC with Spring completed version