@@ -7,51 +7,48 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RestController;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @SpringBootApplication
-@RestController
 public class RelationalDataAccessApplication implements CommandLineRunner {
 
 	private static final Logger log = LoggerFactory.getLogger(RelationalDataAccessApplication.class);
-	@Autowired
-	JdbcTemplate jdbcTemplate;
 
 	public static void main(String args[]) {
 		SpringApplication.run(RelationalDataAccessApplication.class, args);
 	}
 
+	@Autowired
+	JdbcTemplate jdbcTemplate;
+
 	@Override
 	public void run(String... strings) throws Exception {
-		log.info("Creating tables");
-		jdbcTemplate.execute("DROP TABLE customers IF EXISTS");
-		jdbcTemplate.execute("CREATE TABLE customers(id SERIAL, first_name VARCHAR(255), last_name VARCHAR(255))");
 
-		List<Object[]> splitUpNames = List.of("Zhe Chen", "Alice Barber", "Roy Watson", "Moss Moris", "Zhe Wang")
-				.stream()
+		log.info("Creating tables");
+
+		jdbcTemplate.execute("DROP TABLE customers IF EXISTS");
+		jdbcTemplate.execute("CREATE TABLE customers(" +
+				"id SERIAL, first_name VARCHAR(255), last_name VARCHAR(255))");
+
+		// Split up the array of whole names into an array of first/last names
+		List<Object[]> splitUpNames = Arrays.asList("John Woo", "Jeff Dean", "Josh Bloch", "Josh Long", "Zhe Chen", "Trevor Wang").stream()
 				.map(name -> name.split(" "))
-				.map(name -> new Object[]{name[0], name[1]}) // Convert String[] to Object[]
 				.collect(Collectors.toList());
 
+		// Use a Java 8 stream to print out each tuple of the list
+		splitUpNames.forEach(name -> log.info(String.format("Inserting customer record for %s %s", name[0], name[1])));
+
+		// Uses JdbcTemplate's batchUpdate operation to bulk load data
 		jdbcTemplate.batchUpdate("INSERT INTO customers(first_name, last_name) VALUES (?,?)", splitUpNames);
 
-		log.info("Querying for customer records where first_name = 'Zhe':");
-		List<Customer> customersNamedZhe = jdbcTemplate.query(
-				"SELECT id, first_name, last_name FROM customers WHERE first_name = ?",
-				new Object[]{"Zhe"},
-				(rs, rowNum) -> new Customer(rs.getLong("id"), rs.getString("first_name"), rs.getString("last_name"))
-		);
-
-		customersNamedZhe.forEach(customer -> log.info(customer.toString()));
-	}
-
-	@GetMapping("/customers")
-	public List<Customer> getCustomers() {
-		return jdbcTemplate.query(
-				"SELECT id, first_name, last_name FROM customers",
-				(rs, rowNum) -> new Customer(rs.getLong("id"), rs.getString("first_name"), rs.getString("last_name")));
+		// Query for new records
+		log.info("Querying for customer records where first_name = 'Zhe' or 'Trevor':");
+		jdbcTemplate.query(
+						"SELECT id, first_name, last_name FROM customers WHERE first_name IN (?, ?)",
+						new Object[] { "Zhe", "Trevor" },
+						(rs, rowNum) -> new Customer(rs.getLong("id"), rs.getString("first_name"), rs.getString("last_name")))
+				.forEach(customer -> log.info(customer.toString()));
 	}
 }
